Creada primera pantalla de seleccion, añadidos botones y probada su funcionalidad

--- a/CafeFront/app/src/main/AndroidManifest.xml
+++ b/CafeFront/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.CafeFront"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".SeleccionActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
