--- a/CafeFront/app/src/main/AndroidManifest.xml
+++ b/CafeFront/app/src/main/AndroidManifest.xml
@@ -13,8 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CafeFront"
-        tools:targetApi="31"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31">
+        <activity
+            android:name=".IniciarMesa"
+            android:exported="false" />
         <activity
             android:name=".Login"
             android:exported="false" />
