--- a/CafeFront/app/src/main/AndroidManifest.xml
+++ b/CafeFront/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".PedidoMesa"
+            android:exported="false" />
+        <activity
             android:name=".IniciarMesa"
             android:exported="false" />
         <activity
