--- a/CafeFront/app/src/main/AndroidManifest.xml
+++ b/CafeFront/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".MainTrabajador"
+            android:exported="false"
+            android:screenOrientation="landscape"/>
+        <activity
             android:name=".PedidoRecyclerView.PedidoViewHolder"
             android:exported="false" />
         <activity
